--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,13 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sistem Infomet Nelayan BMKG</title>
     <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css">
+    <style>
+        body {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+    </style>
     <script src="./node_modules/leaflet/dist/leaflet.js"></script>
     <script src="./node_modules/angular/angular.js"></script>
 </head>
 
 <body ng-app="infomet_nelayan">
-    <header-container></header-container>
-    <menu-container></menu-container>
+    <header-container menu-container-show="$ctrl.menuContainerShow"></header-container>
+    <menu-container menu-container-show="$ctrl.menuContainerShow"></menu-container>
     <map-container></map-container>
     <script src="./dist/index.js"></script>
 </body>
