--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sistem Infomet Nelayan BMKG</title>
     <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css">
+    <link rel="stylesheet" href="./node_modules/leaflet.pm/dist/leaflet.pm.css">
     <style>
         body {
             position: absolute;
@@ -18,13 +19,14 @@
         }
     </style>
     <script src="./node_modules/leaflet/dist/leaflet.js"></script>
+    <script src="./node_modules/leaflet.pm/dist/leaflet.pm.min.js"></script>
     <script src="./node_modules/angular/angular.js"></script>
 </head>
 
 <body ng-app="infomet_nelayan">
     <header-container menu-container-show="$ctrl.menuContainerShow"></header-container>
-    <menu-container menu-container-show="$ctrl.menuContainerShow"></menu-container>
-    <map-container></map-container>
+    <menu-container menu-container-show="$ctrl.menuContainerShow" map="$ctrl.map"></menu-container>
+    <map-container map="$ctrl.map"></map-container>
     <script src="./dist/index.js"></script>
 </body>
 
