update tampilan side-bar

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -28,7 +28,7 @@
     <div style="height: 100%; display: flex; flex-direction: column;">
         <header-container style="flex-basis: 120px;"></header-container>
         <div style="flex: 1; display: flex;">
-            <side-bar style="flex-basis: 450px;" map="$ctrl.map" ng-init="$ctrl.lastLayer={}" last-layer="$ctrl.lastLayer"></side-bar>
+            <side-bar style="flex-basis: 450px;" map="$ctrl.map"></side-bar>
             <map-container style="flex: 1;" id="map" map="$ctrl.map"></map-container>
         </div>
         <div style="flex-basis: 20px; background-color: #0C3259; color: white; text-align: center; vertical-align: middle;">
