--- a/client/app/index.html
+++ b/client/app/index.html
@@ -22,15 +22,13 @@
     <script src="./node_modules/leaflet/dist/leaflet.js"></script>
     <script src="./node_modules/leaflet.pm/dist/leaflet.pm.min.js"></script>
     <script src="./node_modules/angular/angular.js"></script>
+    <script src="./node_modules/angular-route/angular-route.js"></script>
 </head>
 
 <body ng-app="infomet_nelayan">
     <div style="height: 100%; display: flex; flex-direction: column;">
         <header-container style="flex-basis: 120px;"></header-container>
-        <div style="flex: 1; display: flex;">
-            <side-bar style="flex-basis: 450px;" map="$ctrl.map"></side-bar>
-            <map-container style="flex: 1;" id="map" map="$ctrl.map"></map-container>
-        </div>
+        <div style="flex: 1;" ng-view></div>
         <div style="flex-basis: 20px; background-color: #0C3259; color: white; text-align: center; vertical-align: middle;">
             BMKG Pusat Meteorologi Maritim 2018
         </div>
