--- a/client/app/index.html
+++ b/client/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sistem Infomet Nelayan BMKG</title>
+    <link rel="shortcut icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="./node_modules/leaflet.pm/dist/leaflet.pm.css">
     <link rel="stylesheet" href="./node_modules/w3-css/3/w3.css">
@@ -17,6 +18,10 @@
             width: 100%;
             height: 100%;
             margin: 0;
+        }
+
+        .w3-teal {
+            background-color: #299C4C !important;
         }
     </style>
     <script src="./node_modules/leaflet/dist/leaflet.js"></script>
